# NTCD1

./: CMakeLists.txt  DataReader.h  FabricType.h  Proc.h  README.md  SetReader.h  data.txt  data_float_c.txt  data_int_c.txt  main.cpp  param.ini  result.txt  run
